feat: implement work with prisma ORM
